# fizz-buzz-pytorch

./: README.md  model.py  pyproject.toml  test.py  weights
models/: weights
src/: base.py  config.py  model.py
