[tool.poetry]
name = "fizzbuzz-in-pytorch"
version = "0.1.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
torch = "^1.10.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
